--- a/src/components/modules/public/subscription/index.scss
+++ b/src/components/modules/public/subscription/index.scss
@@ -1,4 +1,9 @@
 .subscription {
+  &__hero {
+    bottom: -177px !important;
+    right: 70px !important;
+  }
+
   &__services {
     &__subtitle {
       display: flex;
