--- a/src/components/modules/public/faq/index.scss
+++ b/src/components/modules/public/faq/index.scss
@@ -11,6 +11,46 @@
       padding-bottom: 62px;
       max-width: 941px;
       margin: 0 auto;
+      border-radius: 20px;
+
+      &__subtitle {
+        display: flex;
+        justify-content: center;
+      }
+
+      &__title {
+        display: flex;
+        margin: 20px auto 54px;
+        text-align: center;
+        max-width: 623px;
+      }
+
+      &__links {
+        max-width: 624px;
+        margin: 0 auto;
+
+        &__link {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          border-bottom: 1px solid #efebf2;
+          padding: 36px 0;
+
+          &:nth-last-of-type(1) {
+            border: 0;
+          }
+
+          &__icon {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid var(--border);
+            width: 48px;
+            height: 48px;
+            border-radius: 100vh;
+          }
+        }
+      }
     }
   }
 }
