--- a/src/components/modules/public/consultation/index.scss
+++ b/src/components/modules/public/consultation/index.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/styles/mixins.scss";
+
 .consultation {
   &__services {
     &__content {
@@ -5,6 +7,11 @@
       flex-direction: column;
       gap: 70px;
       padding-bottom: 94px;
+
+      @include mobile(1101px) {
+        gap: 60px;
+        padding-bottom: 60px;
+      }
     }
   }
 }
