--- a/src/components/modules/public/home/index.scss
+++ b/src/components/modules/public/home/index.scss
@@ -1,10 +1,24 @@
+@import "../../../../assets/styles/mixins.scss";
+
 .home {
   &__hero {
     &__content {
       display: flex;
 
+      @include mobile(1095px) {
+        flex-direction: column-reverse;
+        align-items: center;
+      }
+
       &__text {
         margin: 96px 0 97px;
+
+        @include mobile(1095px) {
+          padding-top: 20px;
+          margin-top: 0;
+          margin-bottom: 60px;
+        }
+
         &__title {
           max-width: 630px;
         }
@@ -13,13 +27,29 @@
           max-width: 612px;
           margin: 27px 0 40px;
           font-weight: 400;
+          font-family: "Inter", sans-serif;
+          color: var(--text);
+
+          @include mobile(600px) {
+            margin: 20px 0 30px;
+          }
+        }
+
+        .home-button {
+          @include mobile(1095px) {
+            width: 100%;
+          }
         }
       }
 
       &__image {
         max-width: 653px;
-        height: 599px;
         transform: translateX(36px);
+
+        @include mobile(1095px) {
+          padding-top: 20px;
+          transform: unset;
+        }
 
         img {
           width: 100%;
@@ -32,21 +62,69 @@
     &__content {
       display: flex;
       gap: 48px;
+
+      @include mobile(1024px) {
+        gap: 20px;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+      // @include mobile(755px) {
+      //   flex-direction: column;
+      // }
     }
   }
 
   &__subscription {
     padding-top: 94px;
+
+    @include mobile(756px) {
+      padding-top: 60px;
+    }
   }
 
   &__benefits {
     padding-top: 90px;
     padding-bottom: 90px;
 
+    @include mobile(860px) {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+
+    &__content {
+      @include mobile(1395px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+
+    .mobile-header {
+      display: none;
+
+      @include mobile(1395px) {
+        display: block;
+      }
+    }
+
     &__wrapper {
       display: flex;
       gap: 48px;
       margin-bottom: 40px;
+      flex-wrap: wrap;
+
+      @include mobile(1395px) {
+        justify-content: center;
+      }
+
+      @include mobile(887px) {
+        gap: 20px;
+      }
+
+      @include mobile(860px) {
+        margin-bottom: 30px;
+      }
 
       .green {
         background: #edfff5;
@@ -61,10 +139,25 @@
       }
     }
 
+    .web-header {
+      @include mobile(1395px) {
+        display: none;
+      }
+    }
+
     &__title {
       margin-top: 18px;
       margin-bottom: 60px;
       max-width: 399px;
+
+      @include mobile(1395px) {
+        max-width: unset;
+      }
+
+      @include mobile(860px) {
+        margin-top: 12px;
+        margin-bottom: 30px;
+      }
     }
 
     &__benefit {
@@ -76,6 +169,11 @@
       justify-content: center;
       padding: 0 40px;
       border-radius: 20px;
+
+      @include mobile(756px) {
+        width: unset;
+        max-width: 400px;
+      }
 
       .benefit-descriptions {
         display: flex;
@@ -100,6 +198,9 @@
 
     &__button {
       margin: 0 auto;
+      @include mobile(600px) {
+        width: 100%;
+      }
     }
   }
 
@@ -108,6 +209,11 @@
     padding-top: 71px;
     padding-bottom: 71px;
     position: relative;
+
+    @include mobile(917px) {
+      padding-bottom: 142px;
+      padding-top: 50px;
+    }
 
     &__content {
       display: flex;
@@ -119,6 +225,11 @@
         margin-bottom: 40px;
         max-width: 600px;
         text-align: center;
+
+        @include mobile(600px) {
+          margin-top: 12px;
+          margin-bottom: 30px;
+        }
       }
 
       .polygon {
@@ -128,18 +239,59 @@
           top: 81px;
           left: 66px;
           width: 209px;
+
+          @include mobile(1080px) {
+            width: 150px;
+          }
+          @include mobile(917px) {
+            top: unset;
+            bottom: 32px;
+          }
+
+          @include mobile(600px) {
+            width: 74px;
+            left: 45px;
+          }
         }
 
         &:nth-child(2) {
           top: 34px;
           right: 142px;
           width: 181px;
+
+          @include mobile(1080px) {
+            width: 100px;
+          }
+
+          @include mobile(917px) {
+            top: unset;
+            bottom: 44px;
+            right: 58px;
+          }
+
+          @include mobile(600px) {
+            width: 85px;
+            right: 39px;
+          }
         }
 
         &:nth-child(3) {
           bottom: 0;
           right: 58px;
           width: 284px;
+
+          @include mobile(1080px) {
+            width: 200px;
+          }
+
+          @include mobile(917px) {
+            right: 284px;
+          }
+
+          @include mobile(600px) {
+            width: 113px;
+            right: 134px;
+          }
         }
       }
     }
@@ -149,11 +301,21 @@
     padding-top: 90px;
     padding-bottom: 90px;
 
+    @include mobile(986px) {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+
     &__content {
       &__title {
         margin-top: 20px;
         margin-bottom: 40px;
         max-width: 614px;
+
+        @include mobile(600px) {
+          margin-top: 12px;
+          margin-bottom: 30px;
+        }
       }
 
       &__links {
@@ -161,16 +323,38 @@
         grid-template-columns: repeat(2, 1fr);
         column-gap: 53px;
 
+        @include mobile(920px) {
+          grid-template-columns: 1fr;
+        }
+
         &__link {
           display: flex;
           align-items: center;
           justify-content: space-between;
-          border-bottom: 1px solid #efebf2;
+          border-bottom: 1px solid var(--border2);
           padding: 36px 0;
 
           &:nth-last-of-type(1),
           &:nth-last-of-type(2) {
             border: 0;
+          }
+
+          &:nth-last-of-type(2) {
+            @include mobile(920px) {
+              border-bottom: 1px solid var(--border2);
+            }
+          }
+
+          &:first-child {
+            @include mobile(920px) {
+              padding-top: 0;
+            }
+          }
+
+          &:last-child {
+            @include mobile(920px) {
+              padding-bottom: 0;
+            }
           }
 
           &__icon {
@@ -181,11 +365,14 @@
             width: 48px;
             height: 48px;
             border-radius: 100vh;
+
+            @include mobile(600px) {
+              width: 40px;
+              height: 40px;
+            }
           }
         }
       }
     }
   }
 }
-
-
