--- a/src/components/modules/public/pricing/index.scss
+++ b/src/components/modules/public/pricing/index.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/styles/mixins.scss";
+
 .pricing {
   &__hero {
     left: 109px !important;
@@ -8,6 +10,16 @@
       display: flex;
       gap: 48px;
       padding-bottom: 90px;
+
+      @include mobile(1189px) {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+
+      @include mobile(811px) {
+        gap: 20px;
+        padding-bottom: 60px;
+      }
     }
   }
 }
