--- a/src/components/modules/ui/heroTitle/index.scss
+++ b/src/components/modules/ui/heroTitle/index.scss
@@ -1,11 +1,36 @@
+@import "../../../../assets/styles/mixins.scss";
+
 .hero-title {
   padding-top: 96px;
   padding-bottom: 130px;
 
+  @include mobile(1212px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
   &__content {
-    display: flex;
-    justify-content: space-between;
     position: relative;
+
+    @include mobile(1212px) {
+      display: flex;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      gap: 50px;
+
+      @include mobile(1212px) {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+      }
+    }
+
+    @include mobile(1212px) {
+      flex-direction: column-reverse;
+    }
 
     &__header {
       max-width: 622px;
@@ -15,6 +40,7 @@
       max-width: 614px;
       font-weight: 400;
       font-family: "Inter", sans-serif;
+      color: var(--text);
     }
 
     .polygon {
@@ -23,6 +49,16 @@
       right: 0;
       bottom: -195px;
       z-index: -1;
+
+      @include mobile(1212px) {
+        position: unset;
+        width: 253px;
+        margin-bottom: 11px;
+      }
+
+      @include mobile(758px) {
+        width: 122px;
+      }
     }
   }
 }
