--- a/src/components/modules/ui/service/index.scss
+++ b/src/components/modules/ui/service/index.scss
@@ -1,3 +1,5 @@
+@import "../../../../assets/styles/mixins.scss";
+
 .service {
   &__content {
     background: #f2f7ff;
@@ -5,8 +7,17 @@
     position: relative;
     border-radius: 20px;
 
+    @include mobile(1171px) {
+      flex-direction: column;
+      align-items: center;
+    }
+
     &__text {
       padding: 70px 0 76px 62px;
+
+      @include mobile(756px) {
+        padding: 43px 20px 33px;
+      }
 
       &__title {
         max-width: 560px;
@@ -16,14 +27,38 @@
         margin-top: 20px;
         margin-bottom: 40px;
         max-width: 530px;
+
+        @include mobile(756px) {
+          margin-bottom: 30px;
+        }
+      }
+
+      .service-button {
+        @include mobile(756px) {
+          width: 100%;
+          text-align: center;
+        }
       }
     }
 
     &__image {
-      max-width: 960px;
+      max-width: 687px;
       position: absolute;
       right: 0;
       bottom: 0;
+
+      @include mobile(1230px) {
+        max-width: 570px;
+      }
+
+      @include mobile(1171px) {
+        max-width: 500px;
+        position: unset;
+      }
+
+      @include mobile(600px) {
+        max-width: 325px;
+      }
     }
   }
 }
