--- a/src/components/modules/public/customise/index.scss
+++ b/src/components/modules/public/customise/index.scss
@@ -16,7 +16,7 @@
       display: flex;
       flex-direction: column;
       row-gap: 90px;
-      border-bottom: 1px solid #d7e4ff;
+      border-bottom: 1px solid var(--border3);
       padding-bottom: 90px;
 
       @include mobile(1101px) {
