--- a/src/components/modules/ui/accordion/index.scss
+++ b/src/components/modules/ui/accordion/index.scss
@@ -23,6 +23,7 @@
       border: 1px solid var(--border);
       border-radius: 100vh;
       flex-shrink: 0;
+      color: var(--dark);
 
       @include mobile(784px) {
         width: 40px;
