--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -171,6 +171,7 @@ h6 {
   justify-content: center;
   color: #3a5899;
   font-weight: 600;
+  text-align: center;
 }
 
 .options-grid {
@@ -179,6 +180,16 @@ h6 {
   gap: 24px;
   max-width: 849px;
   margin: 50px auto 0;
+
+  @include mobile(783px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @include mobile(600px) {
+    grid-template-columns: 1fr;
+    margin: 0 auto;
+    gap: 20px;
+  }
 
   .option {
     border: 1px solid var(--border);
@@ -237,4 +248,16 @@ h6 {
       }
     }
   }
+}
+
+.bg-gradient {
+  background: linear-gradient(265.33deg, #d6f5fc 16.76%, #e6faf4 104.26%);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.border {
+  border-bottom: 1px solid var(--border2);
 }
