--- a/src/components/modules/public/bookConsultation/index.scss
+++ b/src/components/modules/public/bookConsultation/index.scss
@@ -2,6 +2,63 @@
   max-width: 618px;
   margin: 0 auto;
 
+  .stepper {
+    display: flex;
+    justify-content: space-between;
+    max-width: 266px;
+    margin: 30px auto;
+
+    .step-item {
+      position: relative;
+
+      &:not(:first-child)::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        background: var(--border);
+        right: 100%;
+        top: 50%;
+      }
+
+      &.active {
+        .step {
+          background: var(--dark);
+          color: var(--white);
+          border: 0;
+        }
+      }
+
+      &.complete {
+        .step {
+          background: linear-gradient(
+            265.33deg,
+            #81e8ff -3.78%,
+            #c7f6dc 85.48%,
+            #c7f6dc 96.74%
+          );
+          border: 0;
+        }
+      }
+
+      .step {
+        width: 38px;
+        height: 38px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 1px solid var(--border);
+        border-radius: 100vh;
+        font-size: 18px;
+
+        &__tick {
+          width: 16px;
+          height: 12px;
+        }
+      }
+    }
+  }
+
   .consultation-lists {
     margin-top: 40px;
     &__title {
@@ -14,4 +71,33 @@
   .consultation-button {
     margin: 0 auto;
   }
+}
+
+.about-you {
+  &__title {
+    margin-bottom: 50px;
+  }
+
+  &__description {
+    margin: 50px auto 40px;
+    text-align: center;
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 40px;
+  }
+
+  &__buttons {
+    display: flex;
+    align-items: center;
+    gap: 32px;
+    justify-content: center;
+  }
+}
+
+.search-inputs{
+  margin-top: 50px;
 }
