--- a/src/components/modules/ui/input/index.scss
+++ b/src/components/modules/ui/input/index.scss
@@ -7,17 +7,37 @@
     color: var(--dark);
   }
 
-  .input {
-    padding: 12px 14px;
-    width: 100%;
-    border-radius: 10px;
-    border: 1px solid var(--border);
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
+  .input-container {
+    position: relative;
 
-    &::placeholder {
-      color: var(--text);
+    .input {
+      padding: 12px 14px;
+      width: 100%;
+      border-radius: 10px;
+      border: 1px solid var(--border);
+      font-size: 16px;
+      line-height: 24px;
+      font-weight: 400;
+
+      &:hover {
+        background: var(--secondary);
+      }
+
+      &::placeholder {
+        color: var(--text);
+      }
+    }
+
+    .textarea {
+      height: 260px;
+    }
+
+    .input-icons {
+      position: absolute;
+      right: 12px;
+      top: 50%;
+      transform: translateY(-8px);
+      pointer-events: none;
     }
   }
 }
