--- a/src/components/modules/ui/service/index.scss
+++ b/src/components/modules/ui/service/index.scss
@@ -2,7 +2,7 @@
 
 .service {
   &__content {
-    background: #f2f7ff;
+    background: var(--secondary);
     display: flex;
     position: relative;
     border-radius: 20px;
